[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luasense"
version = "0.4.0"
description = "Intelligent autocompletion for Lua scripting language"
authors = [
    {name = "BlankHtmlPage", email = "blankhtmlpager@gmail.com"}
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["autocomplete", "completion", "lua", "intellisense"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
"*" = ["py.typed"]
